--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@expo-google-fonts/montserrat": "^0.2.2",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.2.1",
     "expo": "~47.0.12",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
@@ -27,7 +29,6 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
-    "@types/styled-components": "^5.1.26",
     "typescript": "^4.6.3"
   },
   "private": true
